$Id: NEWS,v 1.10 2003/06/06 21:04:40 dnelson Exp $

unreleased
 * -i option to not run spamassassin on messages coming from internal
   networks.
 * All arguments after -- get passed to spamc (deprecate -D at the same
   time).
 * Envelope, remote IP, and date get sent to spamc, so the results more
   closely match what spamc via procmail sees.  You will need to add a
   line to your sendmail config file to enable date passing (see
   README).
 * A compatible manpage is generated on systems without mdoc macros.

0.1.3a: (2002-12-31)
 * Fixed hanging problem when processing a message with no headers at
   all.  Sort of serious, so it gets its own release.

0.1.3: (2002-12-27)
 * -m option disables body, Subject:, and Content-Type: header
   modification.
 * -r option tells sendmail to reject the message if it exceeds a given
   score.
 * -u option passes recipient username to spamc.
 * Fixed illegal use of freed memory causing message loss on some
   platforms.
 * Fixed header doubling problem, and cleaned up the case where
   incoming messages already have X-Spam* headers
 * Updated RPM files.

0.1.2: (2002-08-18)
 * Many portability fixes.  Should build on any *BSD, Linux, Solaris,
   or Tru64 box, with any milter-compatible sendmail, with any
   compiler.
 * Fixed the "250K deadlock" bug.
 * Subject and Content-Types headers are only replaced if they changed. 
   This makes /var/log/maillog a bit cleaner for servers that get mail
   that has already been run through SpamAssassin.  The mail is still
   checked, so you can't bypass anything by adding SA headers.
 * Added SpamAssassin field "X-Spam-Level".
 * Added a manpage.
 * Added RedHat spec files.
 * -f option forks the milter into the background.
 * -d debugging option.

0.1.1: (2002-01-31)
 * Added SpamAssassin 2.0+ field "X-Spam-Checker-Version"
 * Changed behaviour as follows:
   - Old (already present) "X-Spam" fields are passed to SpamAssassin again,