@@ -1,4 +1,4 @@
-.\" $Id: spamass-milter.1.in,v 1.12 2003/06/09 17:16:36 dnelson Exp $
+.\" $Id: spamass-milter.1.in,v 1.13 2003/06/09 17:19:25 dnelson Exp $
 .Dd July 25, 2001
 .Os
 .Dt SPAMASS_MILTER 8
@@ -8,6 +8,7 @@
 .Sh SYNOPSIS
 .Nm
 .Fl p Ar socket
+.Op Fl b Ar spamaddress
 .Op Fl d Ar debugflags
 .Op Fl D Ar host
 .Op Fl f
@@ -33,6 +34,11 @@ will not be able to access the milter.  This may cause
 messages to bounce, queue, or be passed through unmiltered, depending
 on the parameters in
 .Nm sendmail Ns 's .cf file.
+.It Fl b Ar spamaddress
+Redirects tagged spam to the specified email address.  All envelope
+recipients are removed, and inserted into the message as
+.Ql X-Spam-Orig-To:
+headers.
 .It Fl d Ar debugflags
 Enables logging.  
 .Ar debugflags 
