@@ -1,6 +1,7 @@
-$Id: NEWS,v 1.10 2003/06/06 21:04:40 dnelson Exp $
+$Id: NEWS,v 1.11 2003/06/09 17:19:25 dnelson Exp $
 
 unreleased
+ * -b option to redirect tagged messages to another email address.
  * -i option to not run spamassassin on messages coming from internal
    networks.
  * All arguments after -- get passed to spamc (deprecate -D at the same
